# confortimetro_klimaa_simulacoes

./: .gitignore  README.md  SimulacoesPersonalizadas.bat  SimulacoesPersonalizadas.sh  generate_graph.py  install.sh  main.py  pyproject.toml  run_web.sh  simulacoes_personalizadas.bat  simulacoes_personalizadas.sh  test_interface_improvements.py  test_numpy_fix.py  test_simulation_refactor.py
documentation/: ATUALIZAÇÃO_MAIN.md  PROJETO.md  REFATORACAO_SIMULATION.md
documentation/history/: EXECUÇÃO.md  MELHORIAS_INTERFACE.md
resources/: config.json
resources/EnergyFiles/FAURB/: FAURB_PTHP_ENTORNO.idf  expanded.idf  in.idf
resources/FAURB/: FAURB_PTHP_ENTORNO.idf  expanded.idf  in.idf
scripts/: generate_flowchart.py
src/: app.py  main.py  simulation.py
src/gui/: README.md  __init__.py  main_window.py
src/gui/components/: __init__.py  control_panel.py  results_panel.py  (+2 more)
src/modules/: __init__.py  conditioner.py  conditioner_ac.py  conditioner_all.py  conditioner_closed_window.py  conditioner_complete.py  conditioner_fixed_ac.py  conditioner_fixed_ac_without_fan.py  conditioner_no_people.py  conditioner_without_fan.py  conditioner_without_vent.py  conditioner_without_window.py
src/processors/: __init__.py  idf_processor.py
src/utils/: __init__.py  module_type.py  simulation_config.py
src/web/: README.md  app.py  requirements.txt  simulation_integration.py
tests/: test_clo_priority.py
tests/legacy/: test_interface_improvements.py  test_numpy_fix.py  test_simulation_refactor.py
uploads/: epw_28cb5a25.epw  idf_5f8d5a43.idf
venv_web/: pyvenv.cfg
(+6 files in other folders)
